hphp/hack/test/typecheck/coeffects/tyvars1.php.exp
File "tyvars1.php", line 4, characters 13-31:
Direct references to coeffects namespaces are not allowed (Parsing[1002])
File "tyvars1.php", line 16, characters 5-10:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "tyvars1.php", line 15, characters 19-20:
  From this declaration, the context of this function body provides the capability IO
  File "tyvars1.php", line 22, characters 4-21:
  But the function being called requires the capability set {IO, WriteProperty}
